force-app/main/default/objects/Product2/fields/cafsl__Part_Number__c.field-meta.xml
<CustomField>
    <fullName>cafsl__Part_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Oracle CPQ Cloud Part Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>