force-app/main/default/objects/Product2/fields/CPQ_Default_Margin_Percentage__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Default_Margin_Percentage__c</fullName>
    <description>User Stories 12625, 12171. Mapped from Oracle CPQ Parts field: _part_custom_field7</description>
    <label>Default Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>