force-app/main/default/objects/Product2/fields/CPQ_Eligible_For_Service__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Eligible_For_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User Stories 12625, 12171. Mapped from Oracle CPQ Parts field: eligible_for_service</description>
    <label>Eligible For Service?</label>
    <type>Checkbox</type>
</CustomField>