force-app/main/default/objects/Product2/fields/CPQ_Functional_Module__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Functional_Module__c</fullName>
    <description>User Stories 12625, 12171. Mapped from Oracle CPQ Parts field: _part_custom_field3</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CPQ Functional Module</label>
    <length>255</length>
    <type>Text</type>
</CustomField>