force-app/main/default/objects/Product2/fields/CPQ_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Lead_Time__c</fullName>
    <description>User Stories 12625, 12171. Mapped from Oracle CPQ Parts field: lead_time</description>
    <label>Lead Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>