force-app/main/default/objects/Product2/fields/CPQ_Major_Category__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Major_Category__c</fullName>
    <description>User Stories 12625, 12171. Mapped from Oracle CPQ Parts field: _part_custom_field11</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CPQ Major Category (Level 1)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>