force-app/main/default/objects/Product2/fields/CPQ_Part_Category__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Part_Category__c</fullName>
    <description>User Stories 12625, 12171. Mapped from Oracle CPQ Parts field: _part_custom_field1</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CPQ Part Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>