force-app/main/default/objects/Product2/fields/CPQ_Part_Display_Number__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Part_Display_Number__c</fullName>
    <description>User Stories 12625, 12171. Mapped from Oracle CPQ Parts field: part_display_number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Part Display Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>