force-app/main/default/objects/Product2/fields/CPQ_Price_Type__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Price_Type__c</fullName>
    <description>User Stories 12625, 12171. Mapped from Oracle CPQ Parts field: price_type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Price Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>