force-app/main/default/objects/Product2/fields/CPQ_Sale_Enabled__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Sale_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User Stories 12625, 12171. Mapped from Oracle CPQ Parts field: sale_enabled_flag</description>
    <label>Sale Enabled?</label>
    <type>Checkbox</type>
</CustomField>