force-app/main/default/objects/Product2/fields/CPQ_Sales_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Sales_Product_Type__c</fullName>
    <description>User Stories 12625, 12171. Mapped from Oracle CPQ Parts field: sales_product_type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>