force-app/main/default/objects/Product2/fields/CPQ_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Sub_Category__c</fullName>
    <description>User Stories 12625, 12171. Mapped from Oracle CPQ Parts field: _part_custom_field12</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CPQ Sub Category (Level 2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>