force-app/main/default/objects/Product2/fields/CPQ_Type__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Type__c</fullName>
    <description>User Stories 12625, 12171. Mapped from Oracle CPQ Parts field: _part_custom_field13</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CPQ Type (Level 3)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>