force-app/main/default/objects/Product2/fields/CPQ_Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Vendor_Name__c</fullName>
    <description>User Stories 12625, 12171. Mapped from Oracle CPQ Parts field: _part_custom_field8</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>