force-app/main/default/objects/Product2/fields/CRM_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>CRM_Product_Name__c</fullName>
    <description>User Stories 12625, 12171. Mapped from Oracle CPQ Parts field: _part_custom_field10</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CRM Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>