force-app/main/default/objects/Product2/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>Created as part of story 12959.</description>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EL</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>IL</fullName>
            </value>
            <value>
                <fullName>PL</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>Other-EL</fullName>
                <isActive>false</isActive>
                <label>Other-EL</label>
            </value>
            <value>
                <fullName>Other-ES</fullName>
                <isActive>false</isActive>
                <label>Other-ES</label>
            </value>
            <value>
                <fullName>Other-GE</fullName>
                <isActive>false</isActive>
                <label>Other-GE</label>
            </value>
            <value>
                <fullName>Other-IL</fullName>
                <isActive>false</isActive>
                <label>Other-IL</label>
            </value>
            <value>
                <fullName>Other-PL</fullName>
                <isActive>false</isActive>
                <label>Other-PL</label>
            </value>
            <value>
                <fullName>Other-ST</fullName>
                <isActive>false</isActive>
                <label>Other-ST</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>