force-app/main/default/objects/Product2/fields/SVMXA360__ExpectedMargin__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ExpectedMargin__c</fullName>
    <description>Set the expected margin for this product.</description>
    <label>Expected Margin %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>