force-app/main/default/objects/Product2/fields/SVMXA360__LifeExpectancy__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LifeExpectancy__c</fullName>
    <description>This field is to capture the duration for how long the asset is designed to function under normal conditions.</description>
    <label>Life Expectancy</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>