force-app/main/default/objects/Product2/fields/SVMXA360__LifeExpectancyUnit__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LifeExpectancyUnit__c</fullName>
    <description>The unit for the Life Expectancy of the asset.</description>
    <label>Life Expectancy Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__UnitOfTime</valueSetName>
    </valueSet>
</CustomField>