force-app/main/default/objects/Product2/fields/SVMXA360__OptimalLifeExpectancy__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__OptimalLifeExpectancy__c</fullName>
    <description>This field is used in calculating asset age score in analytics</description>
    <label>Optimal Life Expectancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>