force-app/main/default/objects/Product2/fields/SVMXA360__PackingInstructions__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__PackingInstructions__c</fullName>
    <description>Used during the returns process to indicate to the customer how the product should be packed/handled for proper return.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Packing/Handling Instructions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>