force-app/main/default/objects/Product2/fields/SVMXA360__ProductCost__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ProductCost__c</fullName>
    <description>The cost of the Product.</description>
    <inlineHelpText>ADO story # 12171
This field will be used to store the cost of  products.</inlineHelpText>
    <label>Product Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>