force-app/main/default/objects/Product2/fields/SVMXA360__Repairable__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Repairable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates that a product is repairable. Non-repairable products may be scrapped and/or replaced instead.</description>
    <label>Repairable</label>
    <type>Checkbox</type>
</CustomField>